--- a/migration/index.html
+++ b/migration/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <!-- JavaScript 파일 로드 -->
-    <script src="chatbot.js"></script>
+    <script src="chatbot2.js"></script>
 </body>
 </html> 
